[package]
name = "kernel8"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[dependencies]
raspi3_boot = { path = "raspi3_boot" }
nt_allocator = { path = "raspi3_allocator"}
register = "0.3.2"

[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"
